--- a/boards/shields/splitergoll/splitergoll.conf
+++ b/boards/shields/splitergoll/splitergoll.conf
@@ -1,9 +1,13 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
+# Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60 # 60 seconds
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
