--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,6 +1,10 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
+# Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=15
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=15
+
 # Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
