--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,7 @@ include:
     shield: splitergoll_left
   - board: nice_nano_v2
     shield: splitergoll_right
+  - board: nice_nano_v2
+    shield: my_keyboard_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
