--- a/build.yaml
+++ b/build.yaml
@@ -23,6 +23,6 @@ include:
   - board: nice_nano_v2
     shield: splitergoll_right
   - board: nice_nano_v2
-    shield: my_keyboard_dongle
+    shield: splitergoll_dongle
   - board: nice_nano_v2
     shield: settings_reset
