--- a/boards/shields/splitergoll/splitergoll_left.conf
+++ b/boards/shields/splitergoll/splitergoll_left.conf
@@ -1,6 +1,6 @@
 # Keyboard Name
-# CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
+CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
-# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
