--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,7 @@ include:
     shield: splitergoll_left
   - board: nice_nano_v2
     shield: splitergoll_right
-  - board: nice_nano_v2
+  - board: nrf52840_mdk_dongle
     shield: splitergoll_dongle
-  - board: nice_nano_v2
+  - board: nrf52840_mdk_dongle
     shield: settings_reset
