--- a/boards/arm/nrf52840_mdk_dongle/nrf52840_mdk_dongle.dts
+++ b/boards/arm/nrf52840_mdk_dongle/nrf52840_mdk_dongle.dts
@@ -25,15 +25,15 @@
 	leds {
 		compatible = "gpio-leds";
 		led0_green: led_0 {
-			gpios = <&gpiox 22 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio0 22 GPIO_ACTIVE_LOW>;
 			label = "Green LED 0";
 		};
 		led1_red: led_1 {
-			gpios = <&gpiox 23 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio0 23 GPIO_ACTIVE_LOW>;
 			label = "Red LED 1";
 		};
 		led2_blue: led_2 {
-			gpios = <&gpiox 24 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio0 24 GPIO_ACTIVE_LOW>;
 			label = "Blue LED 2";
 		};
 	};
@@ -42,7 +42,7 @@
 	buttons {
 		compatible = "gpio-keys";
 		button0: button_0 {
-			gpios = <&gpiox 18 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
+			gpios = <&gpio0 18 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
 			label = "Push button switch 0";
 		};
 	};
@@ -67,7 +67,7 @@
 	status = "okay";
 };
 
-&gpiox {
+&gpio0 {
 	status = "okay";
 };
 
