--- a/boards/shields/splitergoll/splitergoll_left.conf
+++ b/boards/shields/splitergoll/splitergoll_left.conf
@@ -1,9 +1,12 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
+# Bluetooth power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Debouncing
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=20
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Encoder
 CONFIG_EC11=y
@@ -11,16 +14,14 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60 # 60 seconds
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Sleep mode
 CONFIG_ZMK_SLEEP=y
-# 30 seconds
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-# 15 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_IDLE_TIMEOUT=30000 # 30 seconds
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # 15 minutes
 
 # Macros
 CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
