--- a/boards/shields/splitergoll/splitergoll_left.conf
+++ b/boards/shields/splitergoll/splitergoll_left.conf
@@ -13,15 +13,18 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Battery level
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60 # 60 seconds
+# CONFIG_ZMK_BATTERY_REPORTING=y
+# Report interval at 60 seconds
+# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Sleep mode
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000 # 30 seconds
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000 # 15 minutes
+# Low sleep timeout at 30 seconds
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Deep sleep timeout at 15 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Macros
 CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
