--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,8 @@ include:
     shield: splitergoll_left
   - board: nice_nano_v2
     shield: splitergoll_right
+  - board: nice_nano_v2
+    shield: settings_reset
   - board: nrf52840dongle_nrf52840
     shield: splitergoll_dongle
   - board: nrf52840dongle_nrf52840
