--- a/build.yaml
+++ b/build.yaml
@@ -24,7 +24,7 @@ include:
     shield: splitergoll_right
   - board: nice_nano_v2
     shield: settings_reset
-  - board: nrf52840_mdk_dongle
+  - board: nrf52840_mdk_usb_dongle
     shield: splitergoll_dongle
-  - board: nrf52840_mdk_dongle
+  - board: nrf52840_mdk_usb_dongle
     shield: settings_reset
