--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -3,3 +3,5 @@ CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_BUILD_OUTPUT_UF2=y
