--- a/boards/shields/splitergoll/splitergoll_left.conf
+++ b/boards/shields/splitergoll/splitergoll_left.conf
@@ -1,5 +1,5 @@
 # Keyboard Name
-CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
+CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_Left"
 
 # Disable USB for HID transmission
 # CONFIG_ZMK_USB=n
