--- a/build.yaml
+++ b/build.yaml
@@ -18,13 +18,26 @@
 #
 ---
 include:
+  # Keyboard halves
   - board: nice_nano_v2
     shield: splitergoll_left
   - board: nice_nano_v2
     shield: splitergoll_right
+
+  # Nice Nano v2 Dongle
+  - board: nice_nano_v2
+    shield: splitergoll_dongle
   - board: nice_nano_v2
     shield: settings_reset
+
+  # Makerdiary Dongle
   - board: nrf52840_mdk_usb_dongle
     shield: splitergoll_dongle
   - board: nrf52840_mdk_usb_dongle
+    shield: settings_reset
+
+  # Seeed Studio Dongle
+  - board: seeeduino_xiao_ble
+    shield: splitergoll_dongle
+  - board: seeeduino_xiao_ble
     shield: settings_reset
