--- a/build.yaml
+++ b/build.yaml
@@ -1,21 +1,3 @@
-# This file generates the GitHub Actions matrix.
-# For simple board + shield combinations, add them to the top level board and
-# shield arrays, for more control, add individual board + shield combinations
-# to the `include` property. You can also use the `cmake-args` property to
-# pass flags to the build command and `artifact-name` to assign a name to
-# distinguish build outputs from each other:
-#
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
-# include:
-#   - board: bdn9_rev2
-#   - board: nice_nano_v2
-#     shield: reviung41
-#   - board: nice_nano_v2
-#     shield: corne_left
-#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-#     artifact-name: corne_left_with_logging
-#
 ---
 include:
   # Keyboard halves
@@ -24,20 +6,26 @@ include:
   - board: nice_nano_v2
     shield: splitergoll_right
 
-  # Nice Nano v2 Dongle
+  # Seeed Studio as Dongle
+  - board: seeeduino_xiao_ble
+    shield: splitergoll_dongle
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
+
+  # Nice!Nano v2 as Dongle
   - board: nice_nano_v2
     shield: splitergoll_dongle
   - board: nice_nano_v2
     shield: settings_reset
 
-  # Makerdiary Dongle
+  # Makerdiary nRF52840 Dongle
   - board: nrf52840_mdk_usb_dongle
     shield: splitergoll_dongle
   - board: nrf52840_mdk_usb_dongle
     shield: settings_reset
 
-  # Seeed Studio Dongle
-  - board: seeeduino_xiao_ble
+  # Nordic nRF52840 Dongle
+  - board: nrf52840dk_nrf52840
     shield: splitergoll_dongle
-  - board: seeeduino_xiao_ble
+  - board: nrf52840dk_nrf52840
     shield: settings_reset
