--- a/build.yaml
+++ b/build.yaml
@@ -15,19 +15,19 @@ include:
     shield: settings_reset
 
   # Nice!Nano v2 as Dongle
-  - board: nice_nano_v2
-    shield: splitergoll_dongle
-  - board: nice_nano_v2
-    shield: settings_reset
+  # - board: nice_nano_v2
+  #   shield: splitergoll_dongle
+  # - board: nice_nano_v2
+  #   shield: settings_reset
 
   # Makerdiary nRF52840 Dongle
-  - board: nrf52840_mdk_usb_dongle
-    shield: splitergoll_dongle
-  - board: nrf52840_mdk_usb_dongle
-    shield: settings_reset
+  # - board: nrf52840_mdk_usb_dongle
+  #   shield: splitergoll_dongle
+  # - board: nrf52840_mdk_usb_dongle
+  #   shield: settings_reset
 
   # Nordic nRF52840 Dongle
-  - board: nrf52840dk_nrf52840
-    shield: splitergoll_dongle
-  - board: nrf52840dk_nrf52840
-    shield: settings_reset
+  # - board: nrf52840dk_nrf52840
+  #   shield: splitergoll_dongle
+  # - board: nrf52840dk_nrf52840
+  #   shield: settings_reset
