--- a/build.yaml
+++ b/build.yaml
@@ -8,20 +8,26 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
 
-  # Seeed Studio Dongle
+  # Seeed Studio as Dongle
   - board: seeeduino_xiao_ble
     shield: splitergoll_dongle
   - board: seeeduino_xiao_ble
     shield: settings_reset
 
-  # Nice Nano v2 Dongle
+  # Nice!Nano v2 as Dongle
   # - board: nice_nano_v2
   #   shield: splitergoll_dongle
   # - board: nice_nano_v2
   #   shield: settings_reset
 
-  # Makerdiary Dongle
+  # Makerdiary nRF52840 Dongle
   # - board: nrf52840_mdk_usb_dongle
   #   shield: splitergoll_dongle
   # - board: nrf52840_mdk_usb_dongle
+  #   shield: settings_reset
+
+  # Nordic nRF52840 Dongle
+  # - board: nrf52840dk_nrf52840
+  #   shield: splitergoll_dongle
+  # - board: nrf52840dk_nrf52840
   #   shield: settings_reset
