--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -1,8 +1,7 @@
-CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
+CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_dongle"
 
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_ZMK_SLEEP=n
