--- a/boards/shields/splitergoll/splitergoll.conf
+++ b/boards/shields/splitergoll/splitergoll.conf
@@ -2,3 +2,6 @@
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
