--- a/boards/shields/splitergoll/splitergoll.dtsi
+++ b/boards/shields/splitergoll/splitergoll.dtsi
@@ -11,8 +11,6 @@
         columns = <12>;
         rows = <8>;
 
-//         |                               LEFT HALF                               |   |                               RIGHT HALF                              |
-//         |           |           |           |           |           |           |   |           |           |           |           |           |           |
         map = <
             RC(0,0)     RC(0,1)     RC(0,2)     RC(0,3)     RC(0,4)     RC(0,5)
             RC(1,0)     RC(1,1)     RC(1,2)     RC(1,3)     RC(1,4)     RC(1,5)
@@ -24,13 +22,39 @@
                                                                                         RC(6,6)     RC(6,7)     RC(6,8)     RC(6,9)     RC(6,10)
                                                                                         RC(7,6)     RC(7,7)     RC(7,8)     RC(7,9)     RC(7,10)
         >;
-//         |           |           |           |           |           |           |   |           |           |           |           |           |           |
-//         |                               LEFT HALF                               |   |                               RIGHT HALF                              |
     };
 
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
+
+        col-gpios
+            = <&pro_micro 4 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 6 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 7 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 8 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 9 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 5 GPIO_ACTIVE_HIGH>
+
+            , <&pro_micro 10 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 16 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 14 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 15 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 18 GPIO_ACTIVE_HIGH>
+            , <&pro_micro 19 GPIO_ACTIVE_HIGH>
+        ;
+
+        row-gpios
+            = <&pro_micro 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            
+            , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+        ;
     };
 
     left_encoder: encoder_left {
