--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -1,4 +1,4 @@
-CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_dongle"
+CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
