Test mouse clic emulation

--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -3,15 +3,13 @@ CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_right"
 
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Debouncing
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 # Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Mouse emulation
+CONFIG_ZMK_MOUSE=y
 
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
@@ -26,6 +24,10 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=30000
 # Deep sleep timeout at 5 minutes
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
+
+# Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 # Macros
 CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=5
