--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,4 +2,5 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    uses: petejohanson/zmk/.github/workflows/build-user-config.yml@pointers-move-scroll
+    # uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
