Test with classic defconfig

--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,6 +1,8 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_right"
 
+# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
 # Encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
@@ -19,8 +21,8 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SLEEP=y
 # Low sleep timeout at 30 seconds
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-# Deep sleep timeout at 5 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
+# Deep sleep timeout at 10 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 # Debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
