--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,7 +1,7 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_right"
 
-# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # Encoder
 CONFIG_EC11=y
