--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -4,4 +4,5 @@ CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 # CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
+# Sleep mode
 CONFIG_ZMK_SLEEP=n
