--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,7 +1,8 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_right"
 
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+# Peripherals
+# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # Encoder
 CONFIG_EC11=y
@@ -12,22 +13,14 @@ CONFIG_ZMK_MOUSE=y
 
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
-# Report interval at 60 seconds
-# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Sleep mode
 CONFIG_ZMK_SLEEP=y
-# Low sleep timeout at 30 seconds
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-# Deep sleep timeout at 10 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 # Debouncing
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Macros
-CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=5
-CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=5
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=0
