--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -1,8 +1,8 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
-# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # Sleep mode
 CONFIG_ZMK_SLEEP=n
