--- a/boards/shields/splitergoll/splitergoll_left.conf
+++ b/boards/shields/splitergoll/splitergoll_left.conf
@@ -2,7 +2,7 @@
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_left"
 
 # Peripherals
-# CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
 # Encoder
 CONFIG_EC11=y
