--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -1,6 +1,8 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll"
 
+# Split settings
+CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
