--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,21 +1,22 @@
 # Keyboard Name
-CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_right"
+CONFIG_ZMK_KEYBOARD_NAME="Split_right"
 
-# Peripherals
+# Split settings
+CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-# Encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# Mouse emulation
-CONFIG_ZMK_MOUSE=y
+# Sleep mode
+CONFIG_ZMK_SLEEP=y
 
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
 
-# Sleep mode
-CONFIG_ZMK_SLEEP=y
+# Mouse emulation
+CONFIG_ZMK_MOUSE=y
+
+# Encoder
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
