--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -10,6 +10,7 @@ CONFIG_ZMK_SLEEP=y
 
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 # Mouse emulation
 CONFIG_ZMK_MOUSE=y
