--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -12,3 +12,7 @@ CONFIG_ZMK_SLEEP=n
 # Battery level
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Macros
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=5
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=5
