--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -14,5 +14,9 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Macros
-CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=5
-CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=5
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=0
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=0
+
+# Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
