--- a/boards/shields/splitergoll/splitergoll_dongle.conf
+++ b/boards/shields/splitergoll/splitergoll_dongle.conf
@@ -6,6 +6,9 @@ CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
+# Bluetooth boost
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Sleep mode
 CONFIG_ZMK_SLEEP=n
 
