--- a/boards/shields/splitergoll/splitergoll_right.conf
+++ b/boards/shields/splitergoll/splitergoll_right.conf
@@ -1,11 +1,15 @@
 # Keyboard Name
 CONFIG_ZMK_KEYBOARD_NAME="Splitergoll_Right"
 
-# Disable USB for HID transmission
-# CONFIG_ZMK_USB=n
+# USB
+# CONFIG_USB=y
+# CONFIG_ZMK_USB=y
 
-# Bluetooth power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Bluetooth
+# CONFIG_BT=n
+# CONFIG_ZMK_BLE=n
+# CONFIG_ZMK_SPLIT=n
+# CONFIG_ZMK_SPLIT_BLE=n
 
 # Debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
@@ -15,20 +19,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Battery level
-# CONFIG_ZMK_BATTERY_REPORTING=y
-# Report interval at 60 seconds
-# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-
 # Sleep mode
-CONFIG_ZMK_SLEEP=y
-# Low sleep timeout at 30 seconds
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-# Deep sleep timeout at 15 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_SLEEP=n
 
 # Macros
-CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=5
-CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
